--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <br>
         <table>
             <tr>
-                <td colspan="3"><input type="text" id="result" class="screen" style="text-align: right;"></td>
+                <td colspan="6"><input type="text" id="result" class="screen"></td>
+                
 
                 <td>
                     <input type="button" value="C" onclick="clearScreen()" class="clear"/>
@@ -37,7 +38,7 @@
             <input type="button" value="-" class="operator" onclick="display('-')">
             <input type="button" value="0" class="button" onclick="display('0')">
             <input type="button" value="." class="button" onclick="display('.')">
-            <input type="button" value="=" class="button equals-sign" onclick="solve()">
+            <input type="button" value="=" class="button equal-sign" onclick="solve()">
             <input type="button" value="+" class="operator" onclick="display('+')">
         </div>
     </div>
