--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Calculator App</title>
     <link rel="stylesheet" href="app.css">
     <script src="app.js" type="text/javascript"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 style="text-align:center">Calculator App!</h1>
+    <h1 style="text-align:center" class="title">Calculator App</h1>
     <div class="container">
         <br>
         <table>
